--- a/CPU itself/CPU16.qsf
+++ b/CPU itself/CPU16.qsf
@@ -55,4 +55,7 @@ set_global_assignment -name VERILOG_FILE CPU16.v
 set_global_assignment -name MIF_FILE program.mif
 set_global_assignment -name VECTOR_WAVEFORM_FILE CPU16.vwf
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output
+set_global_assignment -name ADD_DEFAULT_PINS_TO_SIMULATION_OUTPUT_WAVEFORMS OFF
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE CPU16.vwf
+set_global_assignment -name MIF_FILE fibonacci.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
